Kubernetes/Database/Mariadb/yamls/ig-mariadb.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: traefik-mariadb
  namespace: mariadb
spec:
  entryPoints:
    - mysql
  routes:
    - match: HostSNI(`*`)
      services:
        - name: proxysql
          port: 6033
