Kubernetes/Database/Mariadb/yamls/phpmyadmin-mariadb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phpmyadmin
  namespace: mariadb
  labels:
    app: phpmyadmin
    app.kubernetes.io/name: mariadb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: phpmyadmin
  template:
    metadata:
      labels:
        app: phpmyadmin
        app.kubernetes.io/name: mariadb
    spec:
      containers:
        - name: phpmyadmin
          image: phpmyadmin/phpmyadmin
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: phpmyadmin
  namespace: mariadb
spec:
  type: ClusterIP
  selector:
    app: phpmyadmin
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: traefik-mariadb-basic-auth
  namespace: mariadb
spec:
  basicAuth:
    secret: traefik-mariadb-basic-auth
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: traefik-mariadb-https-redirect
  namespace: mariadb
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: traefik-mariadb-security
  namespace: mariadb
spec:
  headers:
    frameDeny: true
    sslRedirect: true
    browserXssFilter: true
    contentTypeNosniff: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 31536000
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-mariadb-websecure
  namespace: mariadb 
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`mariadb.domain.com`)
      services:
        - name: phpmyadmin
          port: 80
            #          serversTransport: traefik-mariadb-transport
      middlewares:
        - name: traefik-mariadb-security
  tls:
    secretName: mariadb-domain-com
    options:
      name: traefik-mariadb-tlsoptions
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-mariadb-web
  namespace: mariadb
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`mariadb.domain.com`)
      services:
        - name: phpmyadmin
          port: 80
      middlewares:
        - name: traefik-mariadb-https-redirect
